tests/expectations/compiler/integers/i8/max_fail.out
Error [ETYC0372008]: The value 128 is not a valid `i8`
    --> compiler-test:4:17
     |
   4 |     let a: i8 = 128i8;
     |                 ^^^^^
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:1:9
     |
   1 | program test.aleo {}
     |         ^^^^^^^^^
